--- a/MSI_advising.html
+++ b/MSI_advising.html
@@ -9,15 +9,16 @@
 
     <header>
             <a href = "">Skip to Main Content</a>
+            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
             <nav>
                 <ul>
                     <li><a href = "index.html">Home</a></li>
-                    <li><a href = "food_pantry.html">Food Pantry</a></li>
+                    <li><a href = "student_life.html">Student Life</a></li>
                     <li><a href="MSI_advising.html">MSI Advising Resources</a></li>
                     <li><a href="tutoring.html">MSI Tutoring Center</a></li>
                 </ul>
             </nav>
-        <h1>MSI Degree Requirements</h1>
+        <h1>MSI Advising Resources</h1>
 
     </header>
     <main>
@@ -27,15 +28,80 @@
             <p>To earn a Master of Science in Information at the School of Information, you must complete a minimum of 48 credit hours of graduate coursework, with a minimum grade average of B (3.0 minimum cumulative GPA required), including required coursework. Note that within the 48 credit hours of graduate coursework, a minimum of 39 credits must be coursework taken within UMSI (SI credit).
             </p>
 
-            <img src="images/MSI_requirement.png" width="600" alt="credit number requirements for MSI Degree">
+            <img src="images/msi_advising/MSI_requirement.png" width="600" alt="credit number requirements for MSI Degree">
+        </section>
+
+        <section>
+            <h2>Fall 2024 Cohort Degree Requirements</h2>
+            <p>This section aims to provide you with additional information regarding your specific degree requirements.
+            </p>
+
+            <section>
+                <img src="images/msi_advising/big_data_analytics.png" width="150" alt="Big Data Analytics">
+                <button>Degree Requirements</button>
+                <button>Course Planning Sheet</button>
+            </section>
+
+            <section>
+                <img src="images/msi_advising/ux_research_design.png" width="150" alt="UX Research & Design">
+                <button>Degree Requirements</button>
+                <button>Course Planning Sheet</button>
+            </section>
+
+            <section>
+                <img src="images/msi_advising/lakes.png" width="150" alt="Libraries, Archives, and Knowledge Environments in Society (LAKES)">
+                <button>Degree Requirements</button>
+                <button>Course Planning Sheet</button>
+            </section>
+
+            <section>
+                <img src="images/msi_advising/user_centered_agile.png" width="150" alt="User-Centered Agile Development">
+                <button>Degree Requirements</button>
+                <button>Course Planning Sheet</button>
+            </section>
+
+            <h3>How to Use Course Planning Worksheets</h3>
+            <ol>
+                <li>Make a copy of the Course Planning Sheet that corresponds to your chosen pathway (linked above) in your own Google Drive </li>
+                <li>Select the correct plan at the bottom in the tabs available</li>
+                <li>Add in any "Course Waivers" that you have earned in the "Waivers & Exemptions Relevant to MSI Requirements" section</li>
+                <li>Plot out the rest of your coursework during your time at UMSI. </li>
+                <li>Have questions or want your plan reviewed? Email your plan to the MSI Academic Advising team at umsi.advising.msi@umich.edu</li>
+            </ol>
+
         </section>
 
         <section>
             <h2>Elective Options</h2>
             <p>MSI students must enroll in various elective courses to fulfill the 48 total graduate-level credit requirements for the MSI degree. Up to 9 of the graduate-level credits that count toward the MSI degree can be completed from a UM School or College outside of UMSI.
             </p>
+
+            <ul>
+                <li><a href="">Fall 2024 UMSI Electives</a></li>
+                <li><a href="">U-M Graduate Course Catalogs</a></li>
+            </ul>
             
-            <img src="images/MCOMMONS-YostArena_EXT.jpg.JPG" width="500" alt="Yost Arena Photograph">
+            <img src="images/msi_advising/MCOMMONS-YostArena_EXT.jpg.JPG" width="500" alt="Photograph of the Yost Arena building in a sunny day">
+            <p></p>
+        </section>
+
+        <section>
+            <h2>Academic Advising</h2>
+            <p>Academic Advising is a process where students envision, execute, and reflect on their academic plans with guidance from a qualified UMSI Academic Advisor. Students share their goals, challenges, and questions with their academic advisor, and their academic advisor contributes knowledge of university and program requirements, policies, and processes. Together, we develop an academic plan that aligns with the student's personal and professional goals. </p>
+
+            <section>
+                <h3>How can your Academic Advisor help you?</h3>
+                <ul>
+                    <li>Creating an individualized academic plan</li>
+                    <li>Interpreting an academic policy or procedure</li>
+                    <li>Discussing concerns about a particular course</li>
+                    <li>Connecting with student support resources and services</li>
+                    <li>Navigating a disruption to your MSI experience</li>
+                </ul>
+                <button>Schedule 1:1 Appointment</button>
+                <button>Drop In 1:1 Appointment</button>
+                <button>Email Us</button>
+            </section>
         </section>
         
     </main>
