--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 
     <header>
-  <a href = "">Skip to Main Content</a>
+        <a href = "">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "food_pantry.html">Food Pantry</a></li>
+                <li><a href = "student_life.html">Student Life</a></li>
                 <li><a href="MSI_advising.html">MSI Advising Resources</a></li>
                 <li><a href="tutoring.html">MSI Tutoring Center</a></li>
             </ul>
@@ -40,7 +40,7 @@
             <article>
                 <h3>University Health Service (UHS)</h3>
                 <figure>
-                    <img src="images/UHS.jpg" alt="University Health Services building">
+                    <img src="images/home/UHS.jpg" alt="University Health Services building">
                     <figcaption>University Health Services Building</figcaption>
                 </figure>
                 <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups, vaccinations, and specialist referrals.</p>
@@ -48,7 +48,7 @@
             <article>
                 <h3>Recreational Sports</h3>
                 <figure>
-                    <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
+                    <img src="images/home/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
                     <figcaption>UMSI out in the fall!</figcaption>
                 </figure>
                 <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and healthy.</p>
