--- a/tutoring.html
+++ b/tutoring.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li><a href = "index.html">Home</a></li>
-                    <li><a href = "food_pantry.html">Food Pantry</a></li>
+                    <li><a href = "student_life.html">Student Life</a></li>
                     <li><a href="MSI_advising.html">MSI Advising Resources</a></li>
                     <li><a href="tutoring.html">MSI Tutoring Center</a></li>
                 </ul>
@@ -28,14 +28,67 @@
             <p>The Academic Success Team at UMSI is dedicated to supporting students inside and outside of the classroom. This site is dedicated to connecting students to tutoring and academic support resources. 
             </p>
 
-            <img src="images/MCOMMONS-FinalsStudyLocations2024-23.jpg" width="500" alt="student studying in a college building facing window">
+            <img src="images/tutoring/MCOMMONS-FinalsStudyLocations2024-23.jpg" width="500" alt="student studying in a college building facing window">
         </section>
 
         <section>
             <h2>UMSI Peer Tutoring Program</h2>
             <p>In partnership with our UMSI faculty, the UMSI Peer Tutoring program is an opportunity for UMSI students and students taking UMSI courses to engage with peer tutors and receive assistance and support in UMSI courses. </p>
 
-            <img src="images/UMSI_MHIClassroom_02202023_11.JPG" width="500" alt="group of students discussing in front of a laptop">
+            <img src="images/tutoring/UMSI_MHIClassroom_02202023_11.JPG" width="500" alt="group of students discussing in front of a laptop">
+        </section>
+
+        <section>
+            <h2>UMSI Programming Peer Tutoring</h2>
+            <p>UMSI Programming Peer Tutoring Information Available for the below courses:</p>
+            <ul>
+                <li>SI 106 Programs, Information, and People</li>
+                <li>SI 206 Data-Oriented Programming</li>
+                <li>SI 506 Programming I</li>
+                <li>SI 507 Intermediate Programming</li>
+            </ul>
+
+            <section>
+                <h3>Book Appointments</h3>
+
+                <h4>Tamariah Davis</h4>
+                <p>Hi there! I'm Tamariah, and it's great to meet you! I'm currently an AMDP student in the MSI, focusing on Big Data Analytics. I recently graduated with a BSI in Information Analysis this past May. If you're a visual learner or want to explore new ways of understanding your coursework, I'm here to help as your peer tutor. Outside of school, you'll find me on the tennis court, spending time with friends, or getting involved in community activities. Looking forward to connecting with you!</p>
+                <p>Book an appointment with Tamariah: https://calendar.app.google/eGVWb4sfRMSQVj1a6  </p>
+
+                <h4>Prem Ganesan</h4>
+                <p>Hi there! I’m a second-year master’s student diving deep into the world of health informatics, building on a strong foundation from my computer science master’s degree. With 5 years of Python experience under my belt, I’ve tackled everything from data analysis to machine learning and AI, all in the fascinating realm of healthcare. When I’m not coding, you’ll likely find me on the soccer field, juggling my passion for the game with professional-level play. I’m all about making our sessions interactive, insightful, and fun! Let’s connect the tech dots together while keeping the energy high—just like a great match on the field!</p>
+                <p>Book an appointment with Prem: https://calendar.app.google/fYfmYWj2vVBj3tJy9</p>
+
+                <h4>Akash Dewan</h4>
+                <p>Hey! My name is Akash Dewan and I am a senior in the BSI program on the Information Analysis pathway with minors in Computer Science and Digital Studies. I have an extensive background working with Python and SQL and would love to help you out in any of the following classes: SI 106, SI 206/506, SI 305, and SI 330. I am looking to go into Data Analytics / Quantitative Research in the Media/Entertainment Industry so if that is something that aligns with you, please reach out! Outside of academics, I am an avid filmmaker, photographer, and music lover so feel free to hit me with any questions about balancing school with art / ways to get involved artistically on campus! Or if you just wanna yap about existential topics...</p>
+                <p>Book an appointment with Akash: https://calendar.app.google/eb9Cb3Vbfdeu9j1z6</p>
+            </section>
+        </section>
+
+        <section>
+            <h2>UMSI Math Peer Tutoring</h2>
+            <p>UMSI Math Peer Tutoring Information Available for the below subject areas:</p>
+            <ul>
+                <li>Linear algebra</li>
+                <li>Statistics</li>
+                <li>General Math related course support</li>
+            </ul>
+
+            <section>
+                <h3>Book Appointments</h3>
+
+                <h4>Rahat Naseem</h4>
+                <p>I am here to support you with algebra, statistics, and any math-related questions you have. I am passionate about helping students overcome math anxiety by encouraging a shift from a fixed mindset ("I'm not good at math") to a growth mindset ("I can learn and improve in math"). With my experience in linear algebra, calculus, and a variety of other math topics, I can help you tackle homework, clarify concepts, and prepare for exams. Additionally, I can also assist with SI-425 and SI-370. My goal is to make math more accessible and enjoyable, and I’m excited to help you succeed and reach your academic goals. </p>
+                <p>Book an appointment with Rahat: https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2JFLPYonqp2h3A-KkdoCpZFYlvDBJUWsGl3OUCMErH9cON_0MU33nvAFYxMAHRAIur4nCOeBvb </p>
+
+                <h4>Ayush Shah</h4>
+                <p>I’m Ayush Shah, and I’m currently pursuing the Big Data Track here at UMSI. With experience as a peer tutor during my undergraduate studies, I have developed strong skills in data analysis and visualization, and I’m passionate about applying these skills to the sports domain. My expertise lies in interpreting complex datasets and deriving actionable insights, particularly in sports analytics. In my free time, I follow a wide range of sports, including soccer, F1, tennis, and have recently become interested in American football.</p>
+                <p>Book an appointment with Ayush: https://calendar.app.google/bXy8PEBQabVBVMZo9</p>
+
+                <h4>Nuzhat Zahan</h4>
+                <p>Hey there! I'm Nuzhat – Your Math Peer Tutor. I’m a second-year MSI student in the Big Data Track, and during my undergrad in Industrial Engineering, I took a bunch of math credits. I’m excited to help you with all things math! Whether it’s algebra, calculus, or stats, I’ve got six years of tutoring experience breaking down tricky concepts and making them easier to understand. If you’re stuck on homework, prepping for an exam, or just want to brush up on some skills, I’m here to help. You can book a session with your queries, and we’ll take it from there!</p>
+                <p>Book an appointment with Nuzhat: https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1dnYDH3E-HeDHnc-UiSDbQVEzDK2JY7w9tif_Te0iAhy0L6WFvvckhhDWujvfOmSynWYr8U4yV </p>
+            </section>
         </section>
 
     </main>
