--- a/tutoring.html
+++ b/tutoring.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-            <a href = "">Skip to Main Content</a>
+            <a href = "#main_content_start">Skip to Main Content</a>
             <nav>
                 <ul>
                     <li><a href = "index.html">Home</a></li>
@@ -21,7 +21,7 @@
 
     </header>
 
-    <main>
+    <main id="main_content_start">
         
         <section>
             <h2>Welcome!</h2>
