--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <a href = "">Skip to Main Content</a>
+        <a href = "#main_content_start">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -21,7 +21,7 @@
         <h1>Student Success Portal</h1>
 
     </header>
-    <main>
+    <main id="main_content_start">
         <section>
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
