--- a/tutoring.html
+++ b/tutoring.html
@@ -9,6 +9,7 @@
 
     <header>
             <a href = "#main_content_start">Skip to Main Content</a>
+            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
             <nav>
                 <ul>
                     <li><a href = "index.html">Home</a></li>
