--- a/student_life.html
+++ b/student_life.html
@@ -98,9 +98,9 @@
                 <h3>Housing</h3>
                 <p>The many options for housing both on and off campus range from co-ops to rooms in houses to freestanding apartments.</p>
                 <ul>
-                    <li><a href="https://www.housing.umich.edu/options"></a>U-M Housing Office</li>
+                    <li><a href="https://www.housing.umich.edu/options">U-M Housing Office</a></li>
                     <li><a href="http://www.icc.coop/">Co-operative Housing</a></li>
-                    <li><a href="https://offcampushousing.umich.edu/listing"></a>U-M Off-Campus Housing</li>
+                    <li><a href="https://offcampushousing.umich.edu/listing">U-M Off-Campus Housing</a></li>
                 </ul>
             </section>
 
