--- a/student_life.html
+++ b/student_life.html
@@ -25,6 +25,7 @@
     <main id="main_content_start">
         
         <section>
+            <h2>Living in U-M</h2>
             <p>UMSI Student Life’s mission is to enrich each UMSI student’s experience while cultivating an inclusive and welcoming community at the school. We are committed to enhancing student educational experiences through programs, services, and opportunities that develop skills and foster a positive and accessible environment for all UMSI students starting with orientation through graduation. While considering multiple aspects of the student experience, Student Life strives to engage every student across UMSI’s academic programs through its pillars of student leadership, community, well-being and campus life.</p>
             <img src="images/student_life/UMSI_DesignJam_02142022_07.jpg" width="300" alt="students gathering around a desk watching a student drawing">
         </section>
