--- a/MSI_advising.html
+++ b/MSI_advising.html
@@ -37,24 +37,28 @@
             </p>
 
             <section>
+                <h3>Big Data Analytics</h3>
                 <img src="images/msi_advising/big_data_analytics.png" width="150" alt="Big Data Analytics">
                 <button>Degree Requirements</button>
                 <button>Course Planning Sheet</button>
             </section>
 
             <section>
+                <h3>UX Research & Design</h3>
                 <img src="images/msi_advising/ux_research_design.png" width="150" alt="UX Research & Design">
                 <button>Degree Requirements</button>
                 <button>Course Planning Sheet</button>
             </section>
 
             <section>
+                <h3>Libraries, Archives, and Knowledge Environments in Society (LAKES)</h3>
                 <img src="images/msi_advising/lakes.png" width="150" alt="Libraries, Archives, and Knowledge Environments in Society (LAKES)">
                 <button>Degree Requirements</button>
                 <button>Course Planning Sheet</button>
             </section>
 
             <section>
+                <h3>User-Centered Agile Development</h3>
                 <img src="images/msi_advising/user_centered_agile.png" width="150" alt="User-Centered Agile Development">
                 <button>Degree Requirements</button>
                 <button>Course Planning Sheet</button>
